# agentscope

./:  .gitignore  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  agentscope.db  demo_generator.py  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  metrics.py  traces.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  trace.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
landing/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
landing/src/: App.tsx  index.css
sdk/: README.md  pyproject.toml
sdk/agentscope/: __init__.py  client.py  config.py  trace.py
sdk/agentscope/integrations/: __init__.py  openai.py
