[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentscope-sdk"
version = "0.1.0"
description = "AI Agent Tracing and Monitoring SDK"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["ai", "agent", "tracing", "monitoring", "llm", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
langchain = ["langchain>=0.1.0"]
all = ["openai>=1.0.0", "langchain>=0.1.0"]

[project.urls]
Homepage = "https://github.com/yourusername/agentscope"
Documentation = "https://github.com/yourusername/agentscope#readme"
Issues = "https://github.com/yourusername/agentscope/issues"
